--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.4.0",
-    "sweetalert2": "^11.7.5"
+    "mongodb": "^5.4.0"
   }
 }
